--- a/.github/workflows/sync-to-branches.yml
+++ b/.github/workflows/sync-to-branches.yml
@@ -5,10 +5,10 @@ on:
     branches:
       - main
     paths:
-      - 'admin/**'
-      - 'client/**'
-      - 'server/**'
-      - '3d-custom/**'
+      - "admin/**"
+      - "client/**"
+      - "server/**"
+      - "3d-custom/**"
 
 jobs:
   sync:
@@ -35,13 +35,14 @@ jobs:
 
           echo "📦 Syncing folder '$FOLDER' to branch '$BRANCH'"
 
-          # Copy folder content into temp
+          # Check if folder exists
           if [ ! -d "$FOLDER" ]; then
             echo "❌ Folder '$FOLDER' not found in branch 'main'."
             exit 1
           fi
 
-          cp -r "$FOLDER" temp-folder
+          # Copy folder content to temp location outside git working dir
+          cp -r "$FOLDER" "/tmp/temp-folder"
 
           # Fetch & checkout target branch
           git fetch origin
@@ -57,8 +58,8 @@ jobs:
           find . -mindepth 1 -maxdepth 1 ! -name '.git' -exec rm -rf {} +
 
           # Move files from temp folder into current branch
-          cp -r temp-folder/. ./
-          rm -rf temp-folder
+          cp -r /tmp/temp-folder/. ./
+          rm -rf /tmp/temp-folder
 
           # Commit and push if there are changes
           git add .
