--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "express-jwt": "^8.5.1",
     "form-data": "^4.0.3",
     "google-auth-library": "^10.1.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.12.1",
