--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "serve": "^14.2.4",
     "simple-react-validator": "^1.6.2",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
@@ -58,7 +59,7 @@
     "dev": "vite --host --port 3036",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "vite"
+    "start": "serve -s dist"
   },
   "browserslist": {
     "production": [
