--- a/.github/workflows/sync-to-branches.yml
+++ b/.github/workflows/sync-to-branches.yml
@@ -65,7 +65,7 @@ jobs:
           if [ "$FOLDER" = "3d-custom" ]; then
           echo "🔧 Replacing API URL in 3d-custom files..."
            find . -type f \( -name "*.js" -o -name "*.html" \) -exec \
-          sed -i 's|http://localhost:4000|https://inkme-3d-server-production.up.railway.app|g' {} +
+          sed -i 's|http://localhost:4000|https://inkme3d.cloud|g' {} +
            echo "✅ Replaced API base URL for deploy"
           fi
 
